# catcot-mcp

./: .gitignore  CLAUDE.md  README.md  config.py  context_expander.py  dashboard.html  embedder.py  git_tools.py  indexer.py  memory.py  pyproject.toml  requirements.txt  reviewer.py  savings.py  searcher.py  server.py  topology.py  watcher.py  web.py
catcot/: __init__.py  __main__.py  server.py
catcot/chunkers/: __init__.py  generic_chunker.py
catcot/core/: indexer.py  searcher.py
catcot/dashboard/: dashboard.html  web.py
catcot/features/: memory.py  reviewer.py  savings.py  topology.py  watcher.py
chunkers/: base.py  java_chunker.py  js_ts_chunker.py  kotlin_chunker.py  python_chunker.py  sql_chunker.py  treesitter_chunker.py
